--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: #191919;
+  background-color: #0b002b;
   display: flex;
   min-height: 100vh;
   align-items: center;
@@ -18,7 +18,7 @@ body {
 }
 
 canvas {
-  background-color: #111;
+  background-color: #00589b;
 }
 
 .speed {
